// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExamService createExam should create an exam 1`] = `
ExamModel {
  "grades_released_at": null,
  "id": 1,
  "name": "Test Exam",
  "questions": {},
}
`;

exports[`ExamService getExamById should return an exam by id 1`] = `
ExamModel {
  "created_at": "1000000000",
  "exam_date": "1000000000",
  "grades_released_at": null,
  "id": 1,
  "name": "Exam",
  "questions": {},
  "updated_at": "1000000000",
}
`;

exports[`ExamService getExamsByCourseId should return course exams from first page 1`] = `
PageDto {
  "data": [
    ExamModel {
      "created_at": "1000000000",
      "exam_date": "1000000009",
      "grades_released_at": null,
      "id": 10,
      "name": "Exam 9",
      "questions": {},
      "updated_at": "1000000000",
    },
    ExamModel {
      "created_at": "1000000000",
      "exam_date": "1000000008",
      "grades_released_at": null,
      "id": 9,
      "name": "Exam 8",
      "questions": {},
      "updated_at": "1000000000",
    },
    ExamModel {
      "created_at": "1000000000",
      "exam_date": "1000000007",
      "grades_released_at": null,
      "id": 8,
      "name": "Exam 7",
      "questions": {},
      "updated_at": "1000000000",
    },
    ExamModel {
      "created_at": "1000000000",
      "exam_date": "1000000006",
      "grades_released_at": null,
      "id": 7,
      "name": "Exam 6",
      "questions": {},
      "updated_at": "1000000000",
    },
    ExamModel {
      "created_at": "1000000000",
      "exam_date": "1000000005",
      "grades_released_at": null,
      "id": 6,
      "name": "Exam 5",
      "questions": {},
      "updated_at": "1000000000",
    },
  ],
  "meta": PageMetaDto {
    "hasNextPage": true,
    "hasPreviousPage": false,
    "itemCount": 10,
    "page": 1,
    "pageCount": 2,
    "take": 5,
  },
}
`;

exports[`ExamService getExamsByCourseId should return course exams from second page 1`] = `
PageDto {
  "data": [
    ExamModel {
      "created_at": "1000000000",
      "exam_date": "1000000004",
      "grades_released_at": null,
      "id": 5,
      "name": "Exam 4",
      "questions": {},
      "updated_at": "1000000000",
    },
    ExamModel {
      "created_at": "1000000000",
      "exam_date": "1000000003",
      "grades_released_at": null,
      "id": 4,
      "name": "Exam 3",
      "questions": {},
      "updated_at": "1000000000",
    },
    ExamModel {
      "created_at": "1000000000",
      "exam_date": "1000000002",
      "grades_released_at": null,
      "id": 3,
      "name": "Exam 2",
      "questions": {},
      "updated_at": "1000000000",
    },
    ExamModel {
      "created_at": "1000000000",
      "exam_date": "1000000001",
      "grades_released_at": null,
      "id": 2,
      "name": "Exam 1",
      "questions": {},
      "updated_at": "1000000000",
    },
    ExamModel {
      "created_at": "1000000000",
      "exam_date": "1000000000",
      "grades_released_at": null,
      "id": 1,
      "name": "Exam 0",
      "questions": {},
      "updated_at": "1000000000",
    },
  ],
  "meta": PageMetaDto {
    "hasNextPage": false,
    "hasPreviousPage": true,
    "itemCount": 10,
    "page": 2,
    "pageCount": 2,
    "take": 5,
  },
}
`;

exports[`ExamService getGradedExamsByCourseId should return graded exams by course id 1`] = `
[
  ExamModel {
    "created_at": "1000000000",
    "exam_date": "1000000000",
    "id": 1,
    "name": "Exam 0",
    "questions": {},
    "updated_at": "1000000000",
  },
  ExamModel {
    "created_at": "1000000000",
    "exam_date": "1000000001",
    "id": 2,
    "name": "Exam 1",
    "questions": {},
    "updated_at": "1000000000",
  },
  ExamModel {
    "created_at": "1000000000",
    "exam_date": "1000000002",
    "id": 3,
    "name": "Exam 2",
    "questions": {},
    "updated_at": "1000000000",
  },
  ExamModel {
    "created_at": "1000000000",
    "exam_date": "1000000003",
    "id": 4,
    "name": "Exam 3",
    "questions": {},
    "updated_at": "1000000000",
  },
  ExamModel {
    "created_at": "1000000000",
    "exam_date": "1000000004",
    "id": 5,
    "name": "Exam 4",
    "questions": {},
    "updated_at": "1000000000",
  },
  ExamModel {
    "created_at": "1000000000",
    "exam_date": "1000000005",
    "id": 6,
    "name": "Exam 5",
    "questions": {},
    "updated_at": "1000000000",
  },
  ExamModel {
    "created_at": "1000000000",
    "exam_date": "1000000006",
    "id": 7,
    "name": "Exam 6",
    "questions": {},
    "updated_at": "1000000000",
  },
  ExamModel {
    "created_at": "1000000000",
    "exam_date": "1000000007",
    "id": 8,
    "name": "Exam 7",
    "questions": {},
    "updated_at": "1000000000",
  },
  ExamModel {
    "created_at": "1000000000",
    "exam_date": "1000000008",
    "id": 9,
    "name": "Exam 8",
    "questions": {},
    "updated_at": "1000000000",
  },
  ExamModel {
    "created_at": "1000000000",
    "exam_date": "1000000009",
    "id": 10,
    "name": "Exam 9",
    "questions": {},
    "updated_at": "1000000000",
  },
]
`;

exports[`ExamService getGradedExamsByUser should return graded exams by user 1`] = `
[
  {
    "exams": [
      {
        "courseId": 1,
        "examDate": "1000000000",
        "examId": 1,
        "examName": "Exam 0",
        "examScore": 0,
      },
      {
        "courseId": 1,
        "examDate": "1000000001",
        "examId": 2,
        "examName": "Exam 1",
        "examScore": 1,
      },
      {
        "courseId": 1,
        "examDate": "1000000002",
        "examId": 3,
        "examName": "Exam 2",
        "examScore": 2,
      },
      {
        "courseId": 1,
        "examDate": "1000000003",
        "examId": 4,
        "examName": "Exam 3",
        "examScore": 3,
      },
      {
        "courseId": 1,
        "examDate": "1000000004",
        "examId": 5,
        "examName": "Exam 4",
        "examScore": 4,
      },
      {
        "courseId": 1,
        "examDate": "1000000005",
        "examId": 6,
        "examName": "Exam 5",
        "examScore": 5,
      },
      {
        "courseId": 1,
        "examDate": "1000000006",
        "examId": 7,
        "examName": "Exam 6",
        "examScore": 6,
      },
      {
        "courseId": 1,
        "examDate": "1000000007",
        "examId": 8,
        "examName": "Exam 7",
        "examScore": 7,
      },
      {
        "courseId": 1,
        "examDate": "1000000008",
        "examId": 9,
        "examName": "Exam 8",
        "examScore": 8,
      },
      {
        "courseId": 1,
        "examDate": "1000000009",
        "examId": 10,
        "examName": "Exam 9",
        "examScore": 9,
      },
    ],
  },
]
`;

exports[`ExamService getSubmissionsByExamId should return submissions by exam id 1`] = `
[
  {
    "created_at": "1000000000",
    "id": 10,
    "score": 9,
    "student": {
      "id": 10,
      "student_id": "9",
      "user": {
        "avatar_url": null,
        "first_name": "John",
        "id": 10,
        "last_name": "Doe",
      },
    },
    "updated_at": "1000000000",
  },
  {
    "created_at": "1000000000",
    "id": 9,
    "score": 8,
    "student": {
      "id": 9,
      "student_id": "8",
      "user": {
        "avatar_url": null,
        "first_name": "John",
        "id": 9,
        "last_name": "Doe",
      },
    },
    "updated_at": "1000000000",
  },
  {
    "created_at": "1000000000",
    "id": 8,
    "score": 7,
    "student": {
      "id": 8,
      "student_id": "7",
      "user": {
        "avatar_url": null,
        "first_name": "John",
        "id": 8,
        "last_name": "Doe",
      },
    },
    "updated_at": "1000000000",
  },
  {
    "created_at": "1000000000",
    "id": 7,
    "score": 6,
    "student": {
      "id": 7,
      "student_id": "6",
      "user": {
        "avatar_url": null,
        "first_name": "John",
        "id": 7,
        "last_name": "Doe",
      },
    },
    "updated_at": "1000000000",
  },
  {
    "created_at": "1000000000",
    "id": 6,
    "score": 5,
    "student": {
      "id": 6,
      "student_id": "5",
      "user": {
        "avatar_url": null,
        "first_name": "John",
        "id": 6,
        "last_name": "Doe",
      },
    },
    "updated_at": "1000000000",
  },
  {
    "created_at": "1000000000",
    "id": 5,
    "score": 4,
    "student": {
      "id": 5,
      "student_id": "4",
      "user": {
        "avatar_url": null,
        "first_name": "John",
        "id": 5,
        "last_name": "Doe",
      },
    },
    "updated_at": "1000000000",
  },
  {
    "created_at": "1000000000",
    "id": 4,
    "score": 3,
    "student": {
      "id": 4,
      "student_id": "3",
      "user": {
        "avatar_url": null,
        "first_name": "John",
        "id": 4,
        "last_name": "Doe",
      },
    },
    "updated_at": "1000000000",
  },
  {
    "created_at": "1000000000",
    "id": 3,
    "score": 2,
    "student": {
      "id": 3,
      "student_id": "2",
      "user": {
        "avatar_url": null,
        "first_name": "John",
        "id": 3,
        "last_name": "Doe",
      },
    },
    "updated_at": "1000000000",
  },
  {
    "created_at": "1000000000",
    "id": 2,
    "score": 1,
    "student": {
      "id": 2,
      "student_id": "1",
      "user": {
        "avatar_url": null,
        "first_name": "John",
        "id": 2,
        "last_name": "Doe",
      },
    },
    "updated_at": "1000000000",
  },
  {
    "created_at": "1000000000",
    "id": 1,
    "score": 0,
    "student": {
      "id": 1,
      "student_id": "0",
      "user": {
        "avatar_url": null,
        "first_name": "John",
        "id": 1,
        "last_name": "Doe",
      },
    },
    "updated_at": "1000000000",
  },
]
`;

exports[`ExamService getUpcomingExamsByCourseId should return upcoming exams by course id 1`] = `
[
  ExamModel {
    "created_at": "1000000000",
    "grades_released_at": null,
    "id": 1,
    "name": "Exam 0",
    "questions": {},
    "updated_at": "1000000000",
  },
  ExamModel {
    "created_at": "1000000000",
    "grades_released_at": null,
    "id": 2,
    "name": "Exam 1",
    "questions": {},
    "updated_at": "1000000000",
  },
  ExamModel {
    "created_at": "1000000000",
    "grades_released_at": null,
    "id": 3,
    "name": "Exam 2",
    "questions": {},
    "updated_at": "1000000000",
  },
  ExamModel {
    "created_at": "1000000000",
    "grades_released_at": null,
    "id": 4,
    "name": "Exam 3",
    "questions": {},
    "updated_at": "1000000000",
  },
  ExamModel {
    "created_at": "1000000000",
    "grades_released_at": null,
    "id": 5,
    "name": "Exam 4",
    "questions": {},
    "updated_at": "1000000000",
  },
  ExamModel {
    "created_at": "1000000000",
    "grades_released_at": null,
    "id": 6,
    "name": "Exam 5",
    "questions": {},
    "updated_at": "1000000000",
  },
  ExamModel {
    "created_at": "1000000000",
    "grades_released_at": null,
    "id": 7,
    "name": "Exam 6",
    "questions": {},
    "updated_at": "1000000000",
  },
  ExamModel {
    "created_at": "1000000000",
    "grades_released_at": null,
    "id": 8,
    "name": "Exam 7",
    "questions": {},
    "updated_at": "1000000000",
  },
  ExamModel {
    "created_at": "1000000000",
    "grades_released_at": null,
    "id": 9,
    "name": "Exam 8",
    "questions": {},
    "updated_at": "1000000000",
  },
  ExamModel {
    "created_at": "1000000000",
    "grades_released_at": null,
    "id": 10,
    "name": "Exam 9",
    "questions": {},
    "updated_at": "1000000000",
  },
]
`;

exports[`ExamService getUpcomingExamsByCourseUser should return upcoming exams for user 1`] = `
[
  {
    "courseCode": "CS101",
    "courseId": 1,
    "courseName": "Introduction to Computer Science",
    "exams": [
      {
        "id": 1,
        "name": "Exam 0",
      },
      {
        "id": 2,
        "name": "Exam 1",
      },
      {
        "id": 3,
        "name": "Exam 2",
      },
      {
        "id": 4,
        "name": "Exam 3",
      },
      {
        "id": 5,
        "name": "Exam 4",
      },
      {
        "id": 6,
        "name": "Exam 5",
      },
      {
        "id": 7,
        "name": "Exam 6",
      },
      {
        "id": 8,
        "name": "Exam 7",
      },
      {
        "id": 9,
        "name": "Exam 8",
      },
      {
        "id": 10,
        "name": "Exam 9",
      },
    ],
  },
  {
    "courseCode": "CS102",
    "courseId": 2,
    "courseName": "Introduction to Computer Science II",
    "exams": [
      {
        "id": 11,
        "name": "Exam 0",
      },
      {
        "id": 12,
        "name": "Exam 1",
      },
      {
        "id": 13,
        "name": "Exam 2",
      },
      {
        "id": 14,
        "name": "Exam 3",
      },
      {
        "id": 15,
        "name": "Exam 4",
      },
      {
        "id": 16,
        "name": "Exam 5",
      },
      {
        "id": 17,
        "name": "Exam 6",
      },
      {
        "id": 18,
        "name": "Exam 7",
      },
      {
        "id": 19,
        "name": "Exam 8",
      },
      {
        "id": 20,
        "name": "Exam 9",
      },
    ],
  },
]
`;
